// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`setFormErrors doesn't sets an error on unknown fields 1`] = `
Object {
  "section1": Object {
    "fields": Object {
      "questionPeriod": Object {
        "metadata": Object {
          "notExist": Object {
            "errorMessages": "Sub field does not exist",
          },
        },
        "type": "period",
      },
      "questionString": Object {
        "type": "text",
      },
    },
  },
}
`;

exports[`setFormErrors sets error messages on fields 1`] = `
Object {
  "section1": Object {
    "fields": Object {
      "questionPeriod": Object {
        "metadata": Object {
          "from": Object {
            "errorMessages": Array [
              "Erreur questionPeriod 1",
              "Erreur questionPeriod 2",
            ],
          },
          "to": Object {
            "errorMessages": Array [
              "Erreur questionPeriod 1",
              "Erreur questionPeriod 2",
            ],
          },
        },
        "type": "period",
      },
      "questionString": Object {
        "metadata": Object {
          "errorMessages": Array [
            "Erreur string 1",
            "Erreur string 2",
          ],
        },
        "type": "text",
      },
    },
  },
}
`;
